--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -44,8 +44,9 @@
                     android:id="@+id/rv_news"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    app:items="@{viewModel.items}"
                     android:adapter="@{adapter}"
+                    app:items="@{viewModel.items}"
+                    app:addVerticalItemDecoration="@{true}"
                     app:layoutManager="android.support.v7.widget.LinearLayoutManager"/>
 
         </android.support.v4.widget.SwipeRefreshLayout>
