--- a/app/src/main/res/layout/item_comment.xml
+++ b/app/src/main/res/layout/item_comment.xml
@@ -14,16 +14,30 @@
 
     <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="?android:attr/listPreferredItemHeight"
+            android:layout_height="wrap_content"
             android:background="?attr/selectableItemBackground"
-            android:paddingLeft="@dimen/padding_normal"
-            android:paddingRight="@dimen/padding_normal">
+            android:padding="@dimen/padding_normal">
 
         <TextView
+                android:id="@+id/tv_comment"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@{comment.text}"
-                app:layout_constraintBottom_toBottomOf="parent"
+                android:textSize="@dimen/text_medium"
+                android:textColor="@color/black_85"
+                android:maxLines="4"
+                app:textHtml="@{comment.text}"
+                app:layout_constraintBottom_toTopOf="@id/tv_author"
                 app:layout_constraintTop_toTopOf="parent"/>
+
+        <TextView
+                android:id="@+id/tv_author"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/black_55"
+                android:layout_marginTop="@dimen/padding_small"
+                android:textSize="@dimen/text_small"
+                android:text="@{comment.authorAndTime}"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tv_comment"/>
     </android.support.constraint.ConstraintLayout>
 </layout>
