--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#ff6600</color>
     <color name="colorPrimaryDark">#d25604</color>
     <color name="colorAccent">#ff6600</color>
+
+    <color name="black_15">#26000000</color>
+    <color name="black_55">#8C000000</color>
+    <color name="black_85">#D9000000</color>
 </resources>
